Revision history for Bb-Collaborate-Ultra

0.01.01 24th February 2017
        Added sample script: bb-collab-session-log.pl

0.01.00 24th February 2017
        Added session logging classes:
        - Bb::Collaborate::Ultra::Log
        - Bb::Collaborate::Ultra::Log::Attendees > Attendee > Attedance
	Rename class Bb::Collaborate::Ultra::SessionEnrollment
	-> Bb::Collaborate::Ultra::Session::Enrollment
	Rename Bb::Collaborate::Ultra::DAO method del -> delete

0.00.02 20th December 2016
        Fixed thawing of data under Perl 5.10.1-

0.00.01	12th December 2016
        Initial release